--- a/deep-learning-with-python-by-francois-chollet/7-deep-dive-into-keras/02_keras_training_and_evaluation_fundamentals.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/7-deep-dive-into-keras/02_keras_training_and_evaluation_fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "02-keras-training-and-evaluation-fundamentals.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9aTjeKzccd+BBK5hKVTKg",
+      "authorship_tag": "ABX9TyOIDFPHLOITuRASzbk2izzB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -157,7 +157,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9f94b026-c133-4dda-94a7-7e7cf3aa614d"
+        "outputId": "ca31edb8-b883-4e50-cbcc-657aa5142f1e"
       },
       "execution_count": 3,
       "outputs": [
@@ -188,7 +188,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2554ea18-2c85-40df-fd9f-70ee0d395c84"
+        "outputId": "cae46c90-a0ff-4f94-ba73-36db6aa7baa9"
       },
       "execution_count": 4,
       "outputs": [
@@ -197,18 +197,18 @@
           "name": "stdout",
           "text": [
             "Epoch 1/3\n",
-            "1563/1563 [==============================] - 16s 10ms/step - loss: 0.2968 - accuracy: 0.9121 - val_loss: 0.1424 - val_accuracy: 0.9588\n",
+            "1563/1563 [==============================] - 18s 11ms/step - loss: 0.2942 - accuracy: 0.9118 - val_loss: 0.1474 - val_accuracy: 0.9578\n",
             "Epoch 2/3\n",
-            "1563/1563 [==============================] - 13s 8ms/step - loss: 0.1643 - accuracy: 0.9538 - val_loss: 0.1219 - val_accuracy: 0.9663\n",
+            "1563/1563 [==============================] - 18s 11ms/step - loss: 0.1617 - accuracy: 0.9551 - val_loss: 0.1218 - val_accuracy: 0.9678\n",
             "Epoch 3/3\n",
-            "1563/1563 [==============================] - 14s 9ms/step - loss: 0.1394 - accuracy: 0.9623 - val_loss: 0.1165 - val_accuracy: 0.9693\n"
+            "1563/1563 [==============================] - 12s 8ms/step - loss: 0.1387 - accuracy: 0.9622 - val_loss: 0.1125 - val_accuracy: 0.9716\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7fb9f7e32a90>"
+              "<keras.callbacks.History at 0x7f2db7386c50>"
             ]
           },
           "metadata": {},
@@ -224,7 +224,7 @@
       ],
       "metadata": {
         "id": "QkxZ0AFk_tro",
-        "outputId": "15646b7f-05c6-4c89-cdb6-de58accfd659",
+        "outputId": "957df352-f4c1-4044-fa29-f7c33f2c410d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -235,7 +235,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.1067 - accuracy: 0.9708\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.1009 - accuracy: 0.9725\n"
           ]
         }
       ]
@@ -322,7 +322,7 @@
       "metadata": {
         "id": "6x6fmKh1JU-f"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -350,31 +350,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5FtKi4uGxZtZ",
-        "outputId": "46440c80-cd58-4cf7-cbbd-ccd43697f24c"
+        "outputId": "45c33b9e-aa64-4275-d0ce-0e9a32d8778d"
       },
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/3\n",
-            "1563/1563 [==============================] - 15s 9ms/step - loss: 0.2943 - accuracy: 0.9125 - rmse: 7.1820 - val_loss: 0.1448 - val_accuracy: 0.9597 - val_rmse: 7.3612\n",
+            "1563/1563 [==============================] - 14s 9ms/step - loss: 0.2975 - accuracy: 0.9120 - rmse: 7.1765 - val_loss: 0.1539 - val_accuracy: 0.9562 - val_rmse: 7.3494\n",
             "Epoch 2/3\n",
-            "1563/1563 [==============================] - 16s 10ms/step - loss: 0.1661 - accuracy: 0.9535 - rmse: 7.3533 - val_loss: 0.1189 - val_accuracy: 0.9672 - val_rmse: 7.4027\n",
+            "1563/1563 [==============================] - 13s 8ms/step - loss: 0.1680 - accuracy: 0.9520 - rmse: 7.3519 - val_loss: 0.1348 - val_accuracy: 0.9636 - val_rmse: 7.4066\n",
             "Epoch 3/3\n",
-            "1563/1563 [==============================] - 13s 8ms/step - loss: 0.1386 - accuracy: 0.9632 - rmse: 7.3914 - val_loss: 0.1103 - val_accuracy: 0.9720 - val_rmse: 7.4186\n"
+            "1563/1563 [==============================] - 13s 8ms/step - loss: 0.1397 - accuracy: 0.9621 - rmse: 7.3886 - val_loss: 0.1178 - val_accuracy: 0.9708 - val_rmse: 7.4230\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7fb9f221ba10>"
+              "<keras.callbacks.History at 0x7f2db4944250>"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 8
         }
       ]
     },
@@ -389,15 +389,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "THoc3w3dxtDz",
-        "outputId": "45b52e0c-d267-48c9-a400-02bd3435e5e9"
+        "outputId": "c1d95f53-5851-4353-93e5-f9d111df0c1e"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.1014 - accuracy: 0.9730 - rmse: 7.4314\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.0999 - accuracy: 0.9746 - rmse: 7.4363\n"
           ]
         }
       ]
@@ -411,7 +411,7 @@
       "metadata": {
         "id": "IHUX2XdgydGQ"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -426,78 +426,110 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "The Keras `callbacks` API will help you\n",
+        "transform your call to `model.fit()` from a paper airplane into a smart, autonomous\n",
+        "drone that can self-introspect and dynamically take action.\n",
+        "\n",
+        "A callback is an object (a class instance implementing specific methods) that is\n",
+        "passed to the model in the call to `fit()` and that is called by the model at various\n",
+        "points during training. It has access to all the available data about the state of the\n",
+        "model and its performance, and it can take action: interrupt training, save a model,\n",
+        "load a different weight set, or otherwise alter the state of the model.\n",
+        "\n",
+        "Here are some examples of ways you can use callbacks:\n",
+        "\n",
+        "* **Model checkpointing**—Saving the current state of the model at different points\n",
+        "during training.\n",
+        "* **Early stopping**—Interrupting training when the validation loss is no longer\n",
+        "improving (and of course, saving the best model obtained during training).\n",
+        "* **Dynamically adjusting the value of certain parameters during training**—Such as the\n",
+        "learning rate of the optimizer.\n",
+        "* **Logging training and validation metrics during training, or visualizing the representations\n",
+        "learned by the model as they’re updated**—The `fit()` progress bar that you’re\n",
+        "familiar with is in fact a callback!\n",
+        "\n"
       ],
       "metadata": {
         "id": "lb5R-ufpBfks"
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "###EarlyStopping and ModelCheckpoint"
       ],
       "metadata": {
-        "id": "1EWQl1zB8Wrp"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "FhJE-Ww-uu-T"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "This inputs object holds information about the shape and dtype of the data that the\n",
-        "model will process:"
+        "The EarlyStopping callback interrupts training once a target metric being monitored\n",
+        "has stopped improving for a fixed number of epochs. \n",
+        "\n",
+        "For instance, this callback\n",
+        "allows you to interrupt training as soon as you start overfitting, thus avoiding having to\n",
+        "retrain your model for a smaller number of epochs. This callback is typically used in combination with ModelCheckpoint, which lets you continually save the model during\n",
+        "training (and, optionally, save only the current best model so far: the version of the\n",
+        "model that achieved the best performance at the end of an epoch)."
       ],
       "metadata": {
-        "id": "kpRgefBCB-eZ"
+        "id": "j3hfvyutuxWv"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "inputs.shape"
+        "callbacks_list = [\n",
+        "   # Monitors the model’s validation accuracy and Interrupts training when accuracy has stopped improving for two epochs     \n",
+        "   keras.callbacks.EarlyStopping(monitor=\"val_accuracy\", patience=2),\n",
+        "   keras.callbacks.ModelCheckpoint(filepath=\"checkpoint_path.keras\", monitor=\"val_loss\", save_best_only=True)          \n",
+        "]"
       ],
       "metadata": {
-        "id": "iLGXl_PGB-_t",
-        "outputId": "929d8f82-65cc-43ce-b8d6-935a52615c1e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "BlPEtMaXvxD6"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "TensorShape([None, 3])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "inputs.dtype"
+        "model = get_mnist_model()\n",
+        "\n",
+        "# Compile the model by specifying its optimizer, the loss function to minimize, and the metrics to monitor\n",
+        "model.compile(optimizer=\"rmsprop\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\", RootMeanSquaredError()])\n",
+        "\n",
+        "# train the model, optionally providing validation data to monitor performance on unseen data\n",
+        "model.fit(train_images, train_labels, epochs=3, validation_data=(val_images, val_labels), callbacks=callbacks_list)"
       ],
       "metadata": {
-        "id": "y9jbzGXqIHMF",
-        "outputId": "b4e9036e-4469-4013-8f37-c09f69e32e4a",
+        "id": "1EWQl1zB8Wrp",
+        "outputId": "3bfc7041-887a-4048-ebf9-9050f09cef39",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/3\n",
+            "1563/1563 [==============================] - 14s 9ms/step - loss: 0.2928 - accuracy: 0.9141 - rmse: 7.1823 - val_loss: 0.1511 - val_accuracy: 0.9573 - val_rmse: 7.3665\n",
+            "Epoch 2/3\n",
+            "1563/1563 [==============================] - 16s 10ms/step - loss: 0.1668 - accuracy: 0.9541 - rmse: 7.3548 - val_loss: 0.1272 - val_accuracy: 0.9652 - val_rmse: 7.4079\n",
+            "Epoch 3/3\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.1399 - accuracy: 0.9626 - rmse: 7.3881 - val_loss: 0.1180 - val_accuracy: 0.9693 - val_rmse: 7.4214\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tf.float32"
+              "<keras.callbacks.History at 0x7f2db45ac990>"
             ]
           },
           "metadata": {},
@@ -508,113 +540,76 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We call such an object a symbolic tensor. It doesn’t contain any actual data, but it\n",
-        "encodes the specifications of the actual tensors of data that the model will see when\n",
-        "you use it. It stands for future tensors of data.\n",
-        "\n",
-        "All Keras layers can be called both on real tensors of data and on these symbolic tensors."
+        "To reload the model you’ve saved, just use."
       ],
       "metadata": {
-        "id": "DNawZBJXIQ2a"
+        "id": "PSXMnilowtNm"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "features.shape"
+        "model = keras.models.load_model(\"checkpoint_path.keras\")"
       ],
       "metadata": {
-        "id": "ldN80GiEIYy6",
-        "outputId": "6e86962c-c8da-4b36-c72a-0ed8423ed850",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "RobjRdAZwuR_"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "TensorShape([None, 64])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "features.dtype"
+        "# compute the loss and metrics on new data\n",
+        "test_metrics = model.evaluate(test_images, test_labels)"
       ],
       "metadata": {
-        "id": "5SzMp1moIcKu",
-        "outputId": "6ec811f6-ff4d-47c7-d907-bbbc3da50feb",
+        "id": "NFd_QXkNw3F_",
+        "outputId": "96a54341-8bea-4e53-ac03-e85bca33a496",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tf.float32"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Here’s the summary of our model:"
-      ],
-      "metadata": {
-        "id": "dbd_iHx4Il5f"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model.summary()"
-      ],
-      "metadata": {
-        "id": "63EnCSccImR5",
-        "outputId": "a89ecd75-1587-4795-b100-01d442003179",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"model\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " my_input (InputLayer)       [(None, 3)]               0         \n",
-            "                                                                 \n",
-            " dense_4 (Dense)             (None, 64)                256       \n",
-            "                                                                 \n",
-            " dense_5 (Dense)             (None, 10)                650       \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 906\n",
-            "Trainable params: 906\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.1084 - accuracy: 0.9723 - rmse: 5.2285\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# compute classification probabilities on new data\n",
+        "predictions = model.predict(test_images)"
+      ],
+      "metadata": {
+        "id": "G85G7GHzw3fU"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Custom callback"
+      ],
+      "metadata": {
+        "id": "UfXbpJDaxHCk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "qn-V58GwxJn3"
+      }
     },
     {
       "cell_type": "markdown",
