--- a/deep-learning-with-python-by-francois-chollet/7-deep-dive-into-keras/03_keras_custom_training_and_evaluation.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/7-deep-dive-into-keras/03_keras_custom_training_and_evaluation.ipynb
@@ -6,7 +6,7 @@
       "name": "03-keras-custom-training-and-evaluation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNuG04apUCMzOw+vXwarFGa",
+      "authorship_tag": "ABX9TyM1C6VXO93NC1od8kLT+23I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,7 @@
       ],
       "metadata": {
         "id": "lsEhxzMfFG_L",
-        "outputId": "915106cc-4f79-4928-b9e6-722ab15636eb",
+        "outputId": "b8087195-8ec1-402d-b1f3-47c99da55e08",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "6x6fmKh1JU-f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -276,9 +276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5FtKi4uGxZtZ",
-        "outputId": "4b43045f-b19b-4f7d-b4ef-e7c693c8050a"
+        "outputId": "30a3ca2f-04ff-47e1-e897-91adb585a9c1"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,9 +314,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "THoc3w3dxtDz",
-        "outputId": "25918b9b-42f1-4c59-d0be-73b3c1ecb623"
+        "outputId": "1cbc1871-bbbf-43a8-e7db-e053d4a0f26c"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +388,7 @@
       "metadata": {
         "id": "R1He4KzAvAlp"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -411,7 +411,7 @@
       "metadata": {
         "id": "Ip5zzaoy-6dA"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -442,26 +442,26 @@
       ],
       "metadata": {
         "id": "fntIACzX_Upr",
-        "outputId": "4248cb4f-c738-4acf-a128-85fc750d0e22",
+        "outputId": "09a26b30-21dc-4a17-b0bc-ae1acd94a341",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Results at the end of epoch 0\n",
-            "...sparse_categorical_accuracy: 0.9159\n",
-            "...loss: 0.2874\n",
+            "...sparse_categorical_accuracy: 0.9154\n",
+            "...loss: 0.2884\n",
             "Results at the end of epoch 1\n",
-            "...sparse_categorical_accuracy: 0.9533\n",
-            "...loss: 0.1655\n",
+            "...sparse_categorical_accuracy: 0.9531\n",
+            "...loss: 0.1670\n",
             "Results at the end of epoch 2\n",
-            "...sparse_categorical_accuracy: 0.9622\n",
-            "...loss: 0.1430\n"
+            "...sparse_categorical_accuracy: 0.9623\n",
+            "...loss: 0.1377\n"
           ]
         }
       ]
@@ -500,7 +500,7 @@
       "metadata": {
         "id": "grE0SWRIBZKW"
       },
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -518,20 +518,20 @@
       ],
       "metadata": {
         "id": "XwdS365HDOa3",
-        "outputId": "71738668-9aad-4225-d57e-ee901560c354",
+        "outputId": "5ce0ad95-0d0a-491d-bbfd-8f0034001bcf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Evaluation results:\n",
-            "...val_sparse_categorical_accuracy: 0.9642\n",
-            "...val_loss: 0.1434\n"
+            "...val_sparse_categorical_accuracy: 0.9690\n",
+            "...val_loss: 0.1255\n"
           ]
         }
       ]
@@ -557,10 +557,110 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "You may have noticed that your custom loops are running significantly slower than the\n",
+        "built-in `fit()` and `evaluate()`, despite implementing essentially the same logic.\n",
+        "That’s because, by default, TensorFlow code is executed line by line, eagerly, much like\n",
+        "NumPy code or regular Python code. Eager execution makes it easier to debug your\n",
+        "code, but it is far from optimal from a performance standpoint.\n",
+        "\n",
+        "It’s more performant to compile your TensorFlow code into a computation graph that\n",
+        "can be globally optimized in a way that code interpreted line by line cannot. The syntax\n",
+        "to do this is very simple: just add a `@tf.function` to any function you want to compile\n",
+        "before executing."
       ],
       "metadata": {
         "id": "lAddPcxoEFsq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@tf.function\n",
+        "def test_step(inputs, targets):\n",
+        "  # Make prediction, Note that we pass training=False\n",
+        "  predictions = model(inputs, training=False)\n",
+        "  loss = loss_fn(targets, predictions)\n",
+        "\n",
+        "  # Keep track of metrics\n",
+        "  logs = {}\n",
+        "  for metric in metrics:\n",
+        "    metric.update_state(targets, predictions)\n",
+        "    logs[f\"val_{metric.name}\"] = metric.result()\n",
+        "\n",
+        "  # Keep track of the loss average\n",
+        "  loss_tracking_metric.update_state(loss)\n",
+        "  logs[\"val_loss\"] = loss_tracking_metric.result()\n",
+        "  return logs"
+      ],
+      "metadata": {
+        "id": "aqIQ3cgEHPSQ"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "val_dataset = tf.data.Dataset.from_tensor_slices((val_images, val_labels))\n",
+        "val_dataset = val_dataset.batch(32)\n",
+        "\n",
+        "reset_metrics()\n",
+        "for inputs_batch, targets_batch in val_dataset:\n",
+        "  logs = test_step(inputs_batch, targets_batch)\n",
+        "print(\"Evaluation results:\")\n",
+        "for key, value in logs.items():\n",
+        "  print(f\"...{key}: {value:.4f}\")"
+      ],
+      "metadata": {
+        "id": "yxJmAswyHY9W",
+        "outputId": "5ef273e9-e472-420f-8921-fe87e9bd406d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Evaluation results:\n",
+            "...val_sparse_categorical_accuracy: 0.9690\n",
+            "...val_loss: 0.1255\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "On the Colab CPU, we go from taking `1.80s` to run the evaluation loop to only `0.8s`. Much faster!\n",
+        "\n",
+        "Remember, while you are debugging your code, prefer running it eagerly, without\n",
+        "any `@tf.function` decorator. It’s easier to track bugs this way. Once your code is working\n",
+        "and you want to make it fast, add a `@tf.function` decorator to your training step\n",
+        "and your evaluation step—or any other performance-critical function."
+      ],
+      "metadata": {
+        "id": "8_ico5emHieM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Custom training loop"
+      ],
+      "metadata": {
+        "id": "68t0sq2-H_oP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "T48KItvCIAXL"
       }
     }
   ]
