--- a/deep-learning-with-python-by-francois-chollet/7-deep-dive-into-keras/03_keras_custom_training_and_evaluation.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/7-deep-dive-into-keras/03_keras_custom_training_and_evaluation.ipynb
@@ -6,7 +6,7 @@
       "name": "03-keras-custom-training-and-evaluation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM1C6VXO93NC1od8kLT+23I",
+      "authorship_tag": "ABX9TyPOwnU4QezBe6pXmnH/uhbh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,7 @@
       ],
       "metadata": {
         "id": "lsEhxzMfFG_L",
-        "outputId": "b8087195-8ec1-402d-b1f3-47c99da55e08",
+        "outputId": "6d755060-5a8b-45a3-99a1-0373106fbc3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -276,7 +276,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5FtKi4uGxZtZ",
-        "outputId": "30a3ca2f-04ff-47e1-e897-91adb585a9c1"
+        "outputId": "80964171-e6f7-469a-8c72-445f791301dc"
       },
       "execution_count": 5,
       "outputs": [
@@ -314,7 +314,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "THoc3w3dxtDz",
-        "outputId": "1cbc1871-bbbf-43a8-e7db-e053d4a0f26c"
+        "outputId": "10416786-b012-4fbe-8686-c351bbe36f41"
       },
       "execution_count": 6,
       "outputs": [
@@ -442,7 +442,7 @@
       ],
       "metadata": {
         "id": "fntIACzX_Upr",
-        "outputId": "09a26b30-21dc-4a17-b0bc-ae1acd94a341",
+        "outputId": "3eedf968-e221-4bf3-b947-55eb8a120f8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -454,14 +454,14 @@
           "name": "stdout",
           "text": [
             "Results at the end of epoch 0\n",
-            "...sparse_categorical_accuracy: 0.9154\n",
-            "...loss: 0.2884\n",
+            "...sparse_categorical_accuracy: 0.9128\n",
+            "...loss: 0.2926\n",
             "Results at the end of epoch 1\n",
-            "...sparse_categorical_accuracy: 0.9531\n",
-            "...loss: 0.1670\n",
+            "...sparse_categorical_accuracy: 0.9518\n",
+            "...loss: 0.1684\n",
             "Results at the end of epoch 2\n",
-            "...sparse_categorical_accuracy: 0.9623\n",
-            "...loss: 0.1377\n"
+            "...sparse_categorical_accuracy: 0.9630\n",
+            "...loss: 0.1386\n"
           ]
         }
       ]
@@ -518,7 +518,7 @@
       ],
       "metadata": {
         "id": "XwdS365HDOa3",
-        "outputId": "5ce0ad95-0d0a-491d-bbfd-8f0034001bcf",
+        "outputId": "d12aa5aa-cd47-41e4-d967-ad41f42f3c0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -530,8 +530,8 @@
           "name": "stdout",
           "text": [
             "Evaluation results:\n",
-            "...val_sparse_categorical_accuracy: 0.9690\n",
-            "...val_loss: 0.1255\n"
+            "...val_sparse_categorical_accuracy: 0.9685\n",
+            "...val_loss: 0.1275\n"
           ]
         }
       ]
@@ -613,7 +613,7 @@
       ],
       "metadata": {
         "id": "yxJmAswyHY9W",
-        "outputId": "5ef273e9-e472-420f-8921-fe87e9bd406d",
+        "outputId": "9986a89d-7382-460f-ad44-cefd1b081588",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -625,8 +625,8 @@
           "name": "stdout",
           "text": [
             "Evaluation results:\n",
-            "...val_sparse_categorical_accuracy: 0.9690\n",
-            "...val_loss: 0.1255\n"
+            "...val_sparse_categorical_accuracy: 0.9685\n",
+            "...val_loss: 0.1275\n"
           ]
         }
       ]
@@ -657,11 +657,218 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Writing our own training loop entirely from scratch provides you with the most flexibility, but you end up writing a lot of code\n",
+        "while simultaneously missing out on many convenient features of `fit()`, such as callbacks\n",
+        "or built-in support for distributed training.\n",
+        "\n",
+        "There’s actually a middle ground between\n",
+        "`fit()` and a training loop written from scratch: you can provide a custom training step function and let the framework do the rest.\n",
+        "\n",
+        "You can do this by overriding the `train_step()` method of the Model class. This is\n",
+        "the function that is called by `fit()` for every batch of data. You will then be able to call\n",
+        "`fit()` as usual, and it will be running your own learning algorithm under the hood."
       ],
       "metadata": {
         "id": "T48KItvCIAXL"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This metric object will be used to track the average of per-batch losses during training and evaluation\n",
+        "loss_fn = keras.losses.SparseCategoricalCrossentropy()\n",
+        "loss_tracker = keras.metrics.Mean(name=\"loss\")\n",
+        "\n",
+        "class CustomModel(keras.Model):\n",
+        "  def train_step(self, data):\n",
+        "    inputs, targets = data\n",
+        "    with tf.GradientTape() as tape:\n",
+        "      # Run the forward pass, Note that we pass training=True\n",
+        "      predictions = model(inputs, training=True)\n",
+        "      loss = loss_fn(targets, predictions)\n",
+        "    # Run the backward pass. Note that we use model.trainable_weights\n",
+        "    gradients = tape.gradient(loss, model.trainable_weights)\n",
+        "    optimizer.apply_gradients(zip(gradients, model.trainable_weights))\n",
+        "\n",
+        "    # update the loss tracker metric that tracks the average of the loss\n",
+        "    loss_tracker.update_state(loss)\n",
+        "    # return the average loss so far by querying the loss tracker metric\n",
+        "    return {\"loss\": loss_tracker.result()}\n",
+        "\n",
+        "  @property\n",
+        "  def metrics(self):\n",
+        "    return [loss_tracker]"
+      ],
+      "metadata": {
+        "id": "5CZHh7DEShCo"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can now instantiate our custom model, compile it (we only pass the optimizer, since\n",
+        "the loss is already defined outside of the model), and train it using `fit()` as usual:"
+      ],
+      "metadata": {
+        "id": "r6C2YKytSgUx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs = keras.Input(shape=(28 * 28, ))\n",
+        "features = layers.Dense(512, activation=\"relu\")(inputs)\n",
+        "features = layers.Dropout(0.5)(features)\n",
+        "outputs = layers.Dense(10, activation=\"softmax\")(features)\n",
+        "\n",
+        "model = CustomModel(inputs, outputs)\n",
+        "\n",
+        "model.compile(optimizer=keras.optimizers.RMSprop())\n",
+        "model.fit(train_images, train_labels, epochs=3)"
+      ],
+      "metadata": {
+        "id": "xY6abJbFULQh",
+        "outputId": "735be756-618b-406a-c42e-0d21086f04ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/3\n",
+            "1563/1563 [==============================] - 9s 5ms/step - loss: 0.2950\n",
+            "Epoch 2/3\n",
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 0.1652\n",
+            "Epoch 3/3\n",
+            "1563/1563 [==============================] - 10s 6ms/step - loss: 0.1407\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f8e6572e390>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There are a couple of points to note:\n",
+        "\n",
+        "* This pattern does not prevent you from building models with the Functional\n",
+        "API. You can do this whether you’re building Sequential models, Functional\n",
+        "API models, or subclassed models.\n",
+        "\n",
+        "* You don’t need to use a `@tf.function` decorator when you override `train_\n",
+        "step`—the framework does it for you.\n",
+        "\n",
+        "After you’ve called `compile()`, you get access to the following:\n",
+        "\n",
+        "* `self.compiled_loss`—The loss function you passed to `compile()`.\n",
+        "* `self.compiled_metrics`—A wrapper for the list of metrics you passed, which\n",
+        "allows you to call `self.compiled_metrics.update_state()` to update all of\n",
+        "your metrics at once.\n",
+        "* `self.metrics`—The actual list of metrics you passed to `compile()`. Note that it also includes a metric that tracks the loss.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "04jWSHMQVC6I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CustomModel(keras.Model):\n",
+        "\n",
+        "  def train_step(self, data):\n",
+        "    inputs, targets = data\n",
+        "    with tf.GradientTape() as tape:\n",
+        "      # Run the forward pass, Note that we pass training=True\n",
+        "      predictions = model(inputs, training=True)\n",
+        "      # Compute the loss via self.compiled_ loss\n",
+        "      loss = self.compiled_loss(targets, predictions)\n",
+        "    # Run the backward pass. Note that we use model.trainable_weights\n",
+        "    gradients = tape.gradient(loss, model.trainable_weights)\n",
+        "    optimizer.apply_gradients(zip(gradients, model.trainable_weights))\n",
+        "    # Update the model’s metrics via self.compiled_metrics\n",
+        "    self.compiled_metrics.update_state(targets, predictions)\n",
+        "\n",
+        "    # Return a dict mapping metric names to their current value\n",
+        "    return {m.name: m.result() for m in self.metrics}"
+      ],
+      "metadata": {
+        "id": "tj0Ng0V9cvTG"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s try it:"
+      ],
+      "metadata": {
+        "id": "UM51jJvidxEE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs = keras.Input(shape=(28 * 28, ))\n",
+        "features = layers.Dense(512, activation=\"relu\")(inputs)\n",
+        "features = layers.Dropout(0.5)(features)\n",
+        "outputs = layers.Dense(10, activation=\"softmax\")(features)\n",
+        "\n",
+        "model = CustomModel(inputs, outputs)\n",
+        "\n",
+        "model.compile(optimizer=keras.optimizers.RMSprop(), \n",
+        "              loss=keras.losses.SparseCategoricalCrossentropy(),\n",
+        "              metrics=[keras.metrics.SparseCategoricalAccuracy()])\n",
+        "model.fit(train_images, train_labels, epochs=3)"
+      ],
+      "metadata": {
+        "id": "SztGygZGdxZ0",
+        "outputId": "207d0631-5aa8-4eff-bd6e-1ec53aa04ea7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/3\n",
+            "1563/1563 [==============================] - 9s 5ms/step - loss: 0.2950 - sparse_categorical_accuracy: 0.9122\n",
+            "Epoch 2/3\n",
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 0.1671 - sparse_categorical_accuracy: 0.9533\n",
+            "Epoch 3/3\n",
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 0.1396 - sparse_categorical_accuracy: 0.9615\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f8e683e0150>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     }
   ]
 }
